# ucp-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  publish-release.sh  pyproject.toml  requirements.txt  run-server.sh
.github/workflows/: weekly-embeddings.yml
embeddings/gemma/: build_stats.json
embeddings/gemma/conformance.lance/_transactions/: 0-7d892499-cc2e-4b1f-9924-6dea5aaa666e.txn  0-ec6bcccb-1bb7-4360-86b9-513312016586.txn  1-67afad91-6b99-466d-ad00-eee4c341938b.txn  1-ee38fc7f-5d3e-4e7a-9a27-a445f5920543.txn  2-21fdd244-93b6-4cc5-83c8-c2d20315f585.txn  2-9d442119-c667-4d33-8b82-ddad7bde03d9.txn
embeddings/gemma/js-sdk.lance/_transactions/: 0-6bbfa15c-1887-46dc-b931-bdb7fcc26507.txn  0-8b6c015a-1661-4400-822c-3271c0b33f74.txn  1-0885f39f-ec27-47e3-9bf0-f353c86e2317.txn  1-088cf237-8024-4384-b7db-e6268fa255d5.txn  2-4681ea1b-779c-4de8-b55f-13a2e01e0cf8.txn  2-8d0f883d-92c5-4b4c-9f78-caa7a4404192.txn  3-7d9ca84a-630a-4f3a-8f6c-36ecd1c72c3d.txn  4-93e303bb-4ad8-494a-a450-70cf3b32b562.txn  5-370a2e73-c474-4bd9-9805-80ba85a5b7bc.txn  (+1 more)
embeddings/nomic/: build_stats.json
src/embeddings_generator/: __init__.py  base_encoder.py  build_vector_databases.py  gemma_encoder.py  lance_search_client.py  nomic_encoder.py  sources.json
src/generator/: base_encoder.py  build_vector_databases.py  gemma_encoder.py  lance_search_client.py  nomic_encoder.py  sources.json
src/mcp/: index.js  server.py  skills.md
tests/: benchmark_results.json  evaluate_models.py  evaluation_queries.json  model_evaluation_report.md  test_query.py
(+243 files in other folders)
