[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ucp-mcp"
version = "1.0.0"
description = "Universal Checkout Platform MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.6.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "langchain-text-splitters>=0.2.0",
    "mcp>=1.0.0",
]

[project.scripts]
ucp-mcp = "src.mcp.server:main"

[tool.pyright]
extraPaths = ["."]
